# overwatch_py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
overwatch_py/: __init__.py  client.py  config.py  exceptions.py  session.py
overwatch_py/enums/: __init__.py  background_image_size.py  career_stat_category.py  gamemode.py  hero.py  locale.py  map.py  map_gamemode.py  platform.py  rank.py  region.py  role.py
overwatch_py/models/: __init__.py  gamemode_details.py  hero.py  hero_short.py  hero_stats.py  map_details.py  player.py  player_stats.py
overwatch_py/services/: __init__.py  heros.py  maps.py  players.py
tests/: conftest.py  test_enums.py  test_exceptions.py  test_heros_service.py  test_maps_service.py  test_players_service.py  test_smoke.py
tests/fixtures/: openapi.json
