[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overfast-client"
version = "0.1.0"
description = "Async Python client for the OverFast API (Overwatch data)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Leo890728", email = "Leo890728@users.noreply.github.com" },
]
keywords = ["overwatch", "overfast", "api", "async", "httpx", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Framework :: Pydantic :: 2",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "httpx-retries>=0.3",
    "pydantic>=2.5",
    "hishel>=0.0.30,<0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/Leo890728/overwatch_py"
Repository = "https://github.com/Leo890728/overwatch_py"
Issues = "https://github.com/Leo890728/overwatch_py/issues"
Changelog = "https://github.com/Leo890728/overwatch_py/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["overwatch_py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: hits the real OverFast API — requires network and is rate-limited; run with `-m live`",
]
# By default skip live tests; opt-in via `pytest -m live` (or `-m 'live or not live'` to run all).
addopts = "-m 'not live'"